--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.btn-primary a {
+	color: white;
+}
+
+h1 {
+	text-align: center;
+	color: black;
+	margin-bottom: 20px;
+}
+
+.card {
+	text-align: center;
+}
+
+.cocktail_name a {
+	color: black;
+}
+
+.add_cocktail {
+	margin-left: 94px,
+	
+}
+
+.btn-secondary a {
+	color: white;
+}
